@@ -1,9 +1,10 @@
 package com.roomify.detection_be.config;
 
 import jakarta.servlet.http.HttpServletRequest;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
+
+import lombok.NonNull;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.support.ResourceBundleMessageSource;
@@ -13,16 +14,16 @@ import org.springframework.web.servlet.i18n.AcceptHeaderLocaleResolver;
 
 @Configuration
 public class WebConfig implements WebMvcConfigurer {
-  private List<Locale> locales = Arrays.asList(new Locale("en"));
+  private final List<Locale> locales = List.of(new Locale("en"));
 
   @Bean("localeResolver")
   LocaleResolver acceptHeaderLocaleResolver() {
     return new AcceptHeaderLocaleResolver() {
       @Override
-      public Locale resolveLocale(HttpServletRequest request) {
+      public Locale resolveLocale(@NonNull HttpServletRequest request) {
         String headerLang = request.getHeader("Accept-Language");
         return headerLang == null || headerLang.isEmpty()
-            ? locales.get(0)
+            ? locales.getFirst()
             : Locale.lookup(Locale.LanguageRange.parse(headerLang), locales);
       }
     };
